[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csd-dual-engine"
version = "0.1.1"
description = "Physical boundary validation for grid AI using damping-aware CSD-EWS indicators."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "TaiScience Research Group"}
]
keywords = ["critical-slowing-down", "power-grid", "pmu", "jacobian", "early-warning-signals"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
demo = [
  "andes>=1.9",
  "openpyxl>=3.1",
]
test = [
  "pytest>=7.0",
]

[project.scripts]
csd-dual-engine = "csd_dual_engine.kundur_demo:main"

[tool.setuptools.packages.find]
where = ["src"]
